--- a/portfolio-client/src/pages/Service/Service.css
+++ b/portfolio-client/src/pages/Service/Service.css
@@ -1,127 +1,91 @@
+.service_main {
+  font-family: "Poppins", sans-serif;
+  background-color: #1f242d;
+  color: #fff;
+}
 .service__card {
-    background-color: var(--secondary-color)93;
-    -webkit-box-shadow: 0 0 32px 32px #dddddd;
-    -moz-box-shadow: 0 0 32px 32px #dddddd;
-    box-shadow: 0 0 32px 32px #dddddd;
-    /* background-color: var(--secondary-color); */
-    font-size: 18px;
-    border-radius: 5px;
-    /* word-spacing: 2x; */
-    letter-spacing: 1px;
+  font-family: "Poppins", sans-serif;
+  background-color: #1f242d;
+  color: #fff;
 }
-
-
-
-
-
-
-
-.icon-style {
-    /* width: 150px; */
-    transition: color 0.3s ease-in-out;
-}
-
-.icon-style:hover {
-    color: #f25476;
-    /* Specify the color you want on hover */
-}
-
-.color_custom_text {
-    color: #f25476dc;
+.service__card .row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .service-box {
-    text-align: center;
-
-
-
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .bg-custom-Color {
-    transition: color 0.3s ease-in-out;
-    background-color: aliceblue;
-    border-radius: 20px;
-    height: 500px !important;
-    padding-top: 10px;
-    padding-bottom: 10px;
+  transition: color 0.3s ease-in-out;
+  background-color: #323946;
+  color: #fff;
+  border-radius: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .bg-custom-Color:hover {
-    transition: color 0.3s ease-in-out;
-    background-color: rgb(219, 232, 243);
-    border-radius: 20px;
-
+  border: 1px solid #da712c;
+  transform: scale(1.02);
+  transition: 0.5s ease;
 }
 
-/* Add the following CSS rules */
 .bg-custom-Color:hover .icon-style {
-    color: #f25476;
+  color: #f25476;
 }
 
-/* .service-box:hover {
-    background-color: #f0f0f0;
-
-} */
-
-.icon_back_style {
-    text-align: center;
-    margin: auto !important;
-    width: 250px;
-    height: 250px;
-    transition: color 0.3s ease-in-out;
-    background-color: aliceblue;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
+.icon-style {
+  transition: color 0.3s ease-in-out;
 }
 
-.icon_back_style:hover {
-    margin: auto !important;
-    width: 250px;
-    height: 250px;
-    transition: color 0.3s ease-in-out;
-    background-color: aliceblue;
-    color: #f25476;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
+.icon-style:hover {
+  color: #f25476;
+}
+.service-box p {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.1rem;
+  font-weight: normal;
+  line-height: 1.4;
 }
 
+.btn-readmore {
+  display: inline-block;
+  padding: 0.6rem 1.5rem;
+  background: #da712c;
+  border-radius: 4rem;
+  box-shadow: 0 0 1rem #da712c;
+  font-size: 1.2rem;
+  color: #323946;
+  letter-spacing: 0.1rem;
+  font-weight: 600;
+  transition: 0.5s ease;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  scroll-behavior: smooth;
+}
 
+.btn-readmore:hover {
+  color: #323946 !important;
+}
 
 @media (min-width: 320px) and (max-width: 768px) {
+  .icon-style {
+    width: 50px;
+  }
 
-    .service__card {
-        font-size: 15px;
-        letter-spacing: 0px;
-        /* padding: 5px !important; */
-        font-size: 13px;
-    }
-
-    .service__card-title {
-        margin-left: 10px !important;
-        margin-right: 10px !important;
-    }
-
-    .element.style {}
-
-    .icon_back_style {
-        width: 150px;
-        height: 150px;
-    }
-
-    .icon-style {
-        width: 50px;
-    }
-
-    .bg-custom-Color {
-
-        height: 326px !important;
-        padding-top: 20px;
-        padding-bottom: 10px;
-    }
+  .bg-custom-Color {
+    height: auto !important;
+    padding-top: 20px;
+    padding-bottom: 10px;
+  }
 }
