--- a/portfolio-client/src/pages/About/About.css
+++ b/portfolio-client/src/pages/About/About.css
@@ -1,20 +1,25 @@
+#about_me {
+  background-color: #323946;
+  color: #fff;
+}
+
 .about__title {
-    color: var(--primary-color);
-    font-weight: 400;
-    border-bottom: 1px solid var(--primary-color);
+  color: var(--primary-color);
+  font-weight: 400;
+  border-bottom: 1px solid var(--primary-color);
 }
 
 .about__card {
-    -webkit-box-shadow: 0 0 32px 32px #dddddd;
-    -moz-box-shadow: 0 0 32px 32px #dddddd;
-    box-shadow: 0 0 32px 32px #dddddd;
+  /* -webkit-box-shadow: 0 0 32px 32px #dddddd;
+  -moz-box-shadow: 0 0 32px 32px #dddddd;
+  box-shadow: 0 0 32px 32px #dddddd; */
 
-    background-color: rgba(144, 173, 226, 0.8);
-    color: #ffffffd2 !important;
-    font-size: 20px;
-    border-radius: 5px;
-    word-spacing: 1x;
-    /* letter-spacing: 1px; */
+  /* background-color: rgba(144, 173, 226, 0.8); */
+  /* color: #ffffffd2 !important; */
+  font-size: 20px;
+  border-radius: 5px;
+  word-spacing: 1x;
+  /* letter-spacing: 1px; */
 }
 
 /* 
@@ -44,79 +49,125 @@
 } */
 
 .about_details {
-    text-indent: 30px;
-    text-align: justify;
-    /* text-justify: inter-word; */
-    font-size: 18px;
-    letter-spacing: 1px;
-
+  text-indent: 30px;
+  text-align: justify;
+  /* text-justify: inter-word; */
+  font-size: 18px;
+  letter-spacing: 1px;
 }
 
 .icon_about {
-    font-size: 40px;
-    padding: 0;
-    margin: 0;
+  font-size: 40px;
+  padding: 0;
+  margin: 0;
+}
+.row {
+  display: flex;
+  align-items: stretch;
+}
+
+.col-md-4 {
+  flex: 0 0 33.333333%;
+  max-width: 33.333333%;
+}
+
+.col-md-8 {
+  flex: 0 0 66.666667%;
+  max-width: 66.666667%;
 }
 
 .about__cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 70px;
-
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: stretch; /* This ensures both columns have the same height */
+  gap: 45px;
 }
+/* .about__cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 70px;
+} */
 
 .custom_width_150 {
-    width: 300px !important;
-    border-radius: 10px !important;
-
+  width: 240px !important;
+  border-radius: 10px !important;
+}
+.mern-color {
+  color: #da712c;
 }
 
 .custom_width_150:hover {
-    /* background-color: #EA738D !important; */
-    background: linear-gradient(to bottom right,
-            #5B7FFF, #33CCFC);
-    /* #FF9E68, #FF68DE); */
-    color: #fffffff1 !important;
+  /* background-color: #EA738D !important; */
+  background: linear-gradient(to bottom right, #da712c, #323946);
+  /* #FF9E68, #FF68DE); */
+  color: #fffffff1 !important;
 }
 
+.btn-readmore {
+  display: inline-block;
+  padding: 0.7rem 2rem;
+  background: #da712c;
+  border-radius: 4rem;
+  /* box-shadow: 0 0 0.5rem #da712c; */
+  font-size: 1.4rem;
+  color: #323946;
+  letter-spacing: 0.1rem;
+  font-weight: 700;
+  transition: 0.5s ease;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  scroll-behavior: smooth;
+}
+
+.btn-readmore:hover {
+  color: #323946 !important;
+  box-shadow: 0 0 0.5rem #da712c;
+  /*  */
+}
+
+@media (max-width: 768px) {
+  .about__cards {
+    gap: 20px;
+  }
+}
 @media (min-width: 320px) and (max-width: 768px) {
-    .about__card {
-        padding: 1rem !important;
-    }
+  .about__card {
+    padding: 1rem !important;
+  }
 
-    .about__title {
-        padding-top: 1.3rem;
-    }
+  .about__title {
+    padding-top: 1.3rem;
+  }
 
-    .about_detail-sec {
-        padding-left: 0 !important;
-        padding-right: 0 !important;
-        margin-left: 2px !important;
-        margin-right: 2px !important;
-    }
+  .about_detail-sec {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    margin-left: 2px !important;
+    margin-right: 2px !important;
+  }
 
-    .about_first-p {
-        margin-top: 1% !important;
-    }
+  .about_first-p {
+    margin-top: 1% !important;
+  }
 
-    .about_details {
+  .about_details {
+    font-size: 15px;
+    letter-spacing: 0px;
+    padding: 1%;
+  }
 
-        font-size: 15px;
-        letter-spacing: 0px;
-        padding: 1%;
-    }
-
-    .about__cards {
-        gap: 20px;
-
-    }
-    .custom_width_150{
-        width: 150px !important;
-        font-size: 16px;
-    }
-    .first-about-card{
-        width: 250px !important;
-    }
+  .about__cards {
+    gap: 20px;
+  }
+  .custom_width_150 {
+    width: 150px !important;
+    font-size: 16px;
+  }
+  .first-about-card {
+    width: 250px !important;
+  }
 }
