--- a/portfolio-client/src/pages/Contact/Contact.css
+++ b/portfolio-client/src/pages/Contact/Contact.css
@@ -1,140 +1,176 @@
 .contact__section {
-    /* border-bottom: ; */
-    -webkit-box-shadow: 0px 6px 32px 11px #dddddd;
-    -moz-box-shadow: 0px 6px 32px 11px #dddddd;
-    box-shadow: 0px 6px 32px 11px #dddddd;
+  /* border-bottom: ; */
+  /* -webkit-box-shadow: 0px 6px 32px 11px #dddddd;
+  -moz-box-shadow: 0px 6px 32px 11px #dddddd;
+  box-shadow: 0px 6px 32px 11px #dddddd; */
+  background-color: #1f242d;
+  border-radius: 5px;
+  color: #fff;
 }
 
 .bg__color__white {
-    background-color: #e6e5e5d0;
+  background-color: #e6e5e5d0;
 }
 
 .image__round {
-    border-radius: 30px;
-    margin-bottom: 30px;
+  border-radius: 30px;
+  margin-bottom: 30px;
 }
 
-.btn_color_pink {
-    background-color: var(--primary-color) !important;
-    color: #fff;
-    border: 1px solid var(--primary-color);
+/* .btn_color_pink {
+  background-color: var(--primary-color) !important;
+  color: #fff;
+  border: 1px solid var(--primary-color);
 }
 
 .btn_color_pink:hover {
-    background-color: var(--primary-color) !important;
-    color: #fff;
-    border: 1px solid #f25476 !important;
-    box-shadow: 1px 1px 1px 1px #f25476;
+  background-color: var(--primary-color) !important;
+  color: #fff;
+  border: 1px solid #f25476 !important;
+  box-shadow: 1px 1px 1px 1px #f25476;
 }
 
 .btn_color_pink:active {
-    background-color: var(--primary-color) !important;
-    color: #fff;
-    border: 1px solid #e9385f !important;
-    /* box-shadow: 1px 1px #888888; */
+  background-color: var(--primary-color) !important;
+  color: #fff;
+  border: 1px solid #e9385f !important;
+  /* box-shadow: 1px 1px #888888; */
+/* } */
+.btn_color_custom {
+  display: inline-block;
+  padding: 0.6rem 1.5rem;
+  background: #da712c;
+  border-radius: 4rem;
+  /* box-shadow: 0 0 1rem #da712c; */
+  font-size: 1.2rem;
+  color: #323946;
+  letter-spacing: 0.1rem;
+  font-weight: 600;
+  transition: 0.5s ease;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  scroll-behavior: smooth;
+}
+
+.btn_color_custom:hover {
+  background: #da712c;
+  border-radius: 4rem;
+  box-shadow: 0 0 1rem #da712c;
+  color: #323946;
+  font-weight: 700;
 }
 
 .custom__mt-7rem {
-    margin-top: 7rem;
+  margin-top: 7rem;
 }
 
 .contact__image {
-    width: 350px;
-    height: 300px;
+  width: 350px;
+  height: 300px;
 }
-
+.text-custom-Color-org {
+  color: #da712c;
+}
 .contact-form input {
-    /* font-size: small; */
-    /* width: 80%; */
-    margin: auto;
-    margin-top: 5px;
-    caret-color: var(--primary-color);
-    outline: none;
-    color: var(--primary-color);
-    /* box-shadow: inset 0 -1px 0 #ddd; */
-
+  /* font-size: small; */
+  /* width: 80%; */
+  margin: auto;
+  margin-top: 5px;
+  caret-color: #da712c;
+  outline: none;
+  color: #da712c !important;
+  background-color: #323946;
+  /* box-shadow: inset 0 -1px 0 #ddd; */
 }
 
 .contact-form input:focus {
-    border: 1px solid var(--primary-color);
-    outline: none;
-    box-shadow: 0 0 0 0.1rem var(--primary-color);
+  border: 1px solid #da712c;
+  outline: none;
+  box-shadow: 0 0 0 0.1rem #da712c;
+  background-color: #323946;
 }
 
 .contact-form textarea {
-    /* font-size: small; */
-    /* width: 80%; */
+  /* font-size: small; */
+  /* width: 80%; */
+  margin: auto;
+  margin-top: 5px;
+  caret-color: #da712c;
+  outline: none;
+  color: #da712c !important;
+  background-color: #323946;
+}
+
+.contact-form textarea:focus {
+  border: 1px solid #da712c;
+  outline: none;
+  box-shadow: 0 0 0 0.1rem #da712c;
+  background-color: #323946;
+}
+.contact-form textarea::placeholder {
+  color: #da712c;
+}
+
+.contact-form input::placeholder {
+  color: #da712c;
+}
+@media (min-width: 320px) and (max-width: 768px) {
+  .contact__image {
+    width: 250px;
+    height: 200px;
+  }
+
+  .custom__mt-7rem {
+    margin-top: 5vh;
+  }
+
+  .contact-us-custom-col {
+    margin-left: 0;
+    text-align: center;
+  }
+
+  .contact-form {
+    margin: auto;
+  }
+
+  .contact-form input {
+    font-size: small;
+    width: 80%;
     margin: auto;
     margin-top: 5px;
     caret-color: var(--primary-color);
     outline: none;
     color: var(--primary-color);
-}
+  }
 
-.contact-form textarea:focus {
+  .contact-form input:focus {
     border: 1px solid var(--primary-color);
     outline: none;
     box-shadow: 0 0 0 0.1rem var(--primary-color);
-}
+  }
 
+  .contact-form textarea {
+    font-size: small;
+    width: 80%;
+    margin: auto;
+    margin-top: 5px;
+    caret-color: var(--primary-color);
+    outline: none;
+    color: var(--primary-color);
+  }
 
-@media (min-width: 320px) and (max-width: 768px) {
-    .contact__image {
-        width: 250px;
-        height: 200px;
-    }
+  .contact-form textarea:focus {
+    border: 1px solid var(--primary-color);
+    outline: none;
+    box-shadow: 0 0 0 0.1rem var(--primary-color);
+  }
 
-    .custom__mt-7rem {
-        margin-top: 5vh;
-    }
-
-    .contact-us-custom-col {
-        margin-left: 0;
-        text-align: center;
-    }
-
-    .contact-form {
-        margin: auto;
-    }
-
-    .contact-form input {
-        font-size: small;
-        width: 80%;
-        margin: auto;
-        margin-top: 5px;
-        caret-color: var(--primary-color);
-        outline: none;
-        color: var(--primary-color);
-
-    }
-
-    .contact-form input:focus {
-        border: 1px solid var(--primary-color);
-        outline: none;
-        box-shadow: 0 0 0 0.1rem var(--primary-color);
-    }
-
-    .contact-form textarea {
-        font-size: small;
-        width: 80%;
-        margin: auto;
-        margin-top: 5px;
-        caret-color: var(--primary-color);
-        outline: none;
-        color: var(--primary-color);
-    }
-
-    .contact-form textarea:focus {
-        border: 1px solid var(--primary-color);
-        outline: none;
-        box-shadow: 0 0 0 0.1rem var(--primary-color);
-    }
-
-    .contact-form button {
-        font-size: small;
-        width: 80%;
-        margin: auto;
-        margin-top: 5px;
-        margin-bottom: 10px;
-    }
+  .contact-form button {
+    font-size: small;
+    width: 80%;
+    margin: auto;
+    margin-top: 5px;
+    margin-bottom: 10px;
+  }
 }
