--- a/portfolio-client/src/pages/Education/Education.css
+++ b/portfolio-client/src/pages/Education/Education.css
@@ -1,26 +1,34 @@
-.education__styles{
-    background-color: var(--secondary-color);
-    
+.education__styles {
+  /* background-color: var(--secondary-color); */
+  background-color: #1f242d;
 }
 .education__title {
-    /* color: var(--primary-color);
+  /* color: var(--primary-color);
      */
-      color: var(--primary-color);
-      /* background-color: var(--quaternary-color); */
-    font-weight: 400;
-    border-bottom: 1px solid var(--primary-color);
+  color: var(--primary-color);
+  /* background-color: var(--quaternary-color); */
+  font-weight: 400;
+  border-bottom: 1px solid var(--primary-color);
 }
 .education__card {
-    -webkit-box-shadow: 0 0 32px 32px #dddddd;
-    -moz-box-shadow: 0 0 32px 32px #dddddd;
-    box-shadow: 0 0 32px 32px #dddddd;
-    background-color: var(--secondary-color);
-    font-size: 20px;
-    border-radius: 5px;
-    word-spacing: 2x;
-    letter-spacing: 1px;
+  /* -webkit-box-shadow: 0 0 32px 32px #dddddd;
+  -moz-box-shadow: 0 0 32px 32px #dddddd;
+  box-shadow: 0 0 32px 32px #dddddd; */
+  /* background-color: var(--secondary-color); */
+  background-color: #1f242d;
+  font-size: 20px;
+  border-radius: 5px;
+  word-spacing: 2x;
+  letter-spacing: 1px;
+}
+
+.change__icon__style {
+  background-color: #da712c !important;
+  color: #1f242d !important;
 }
 .change__icon__style:hover {
-    background-color: var(--secondary-color) !important;
-    color: var(--primary-color) !important;
+  /* background-color: var(--secondary-color) !important;
+  color: var(--primary-color) !important; */
+  background-color: #1f242d !important;
+  color: #da712c !important;
 }
