--- a/portfolio-client/src/pages/Project/Project.css
+++ b/portfolio-client/src/pages/Project/Project.css
@@ -146,7 +146,7 @@ button:active {
   color: #1f242d;
   background-color: #da712c;
   border: 1px solid #1f242d;
-  box-shadow: 0 0 10px #da712c;
+  /* box-shadow: 0 0 10px #da712c; */
   font-weight: 700;
 }
 
@@ -172,8 +172,8 @@ button:active {
 
   .badge__style_color {
     font-size: 14px;
-    top: 30px;
-    left: 0px;
+    /* top: 30px; */
+    /* left: -20px; */
   }
 
   .badge__color {
@@ -191,5 +191,10 @@ button:active {
 
   .main-div-class {
     margin: 0;
+    padding: 15px;
+  }
+  .project-card-size {
+    width: 100%;
+    margin: auto;
   }
 }
