Add Responsive Code

--- a/portfolio-client/src/pages/Project/Project.css
+++ b/portfolio-client/src/pages/Project/Project.css
@@ -188,13 +188,20 @@ button:active {
     font-size: small;
     padding: 3px 0px;
   }
-
+  .project_main {
+    padding-top: 0 !important;
+  }
   .main-div-class {
     margin: 0;
     padding: 15px;
   }
   .project-card-size {
-    width: 100%;
+    max-width: 100%;
     margin: auto;
+  }
+  .badge-section-css {
+    margin-bottom: 0.5rem;
+    font-size: 8px;
+    letter-spacing: 1px;
   }
 }
