--- a/portfolio-client/src/components/styles.css
+++ b/portfolio-client/src/components/styles.css
@@ -147,4 +147,8 @@
     padding-right: 0px !important;
     margin-right: 0px !important;
   }
+  .li_circle {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
 }
