--- a/portfolio-client/src/components/styles.css
+++ b/portfolio-client/src/components/styles.css
@@ -151,4 +151,45 @@
     width: 2.5rem;
     height: 2.5rem;
   }
+  .sticky-top-top {
+    position: fixed !important;
+    top: 0;
+    z-index: 999999999999999999999;
+  }
+  .navbar-toggler {
+    /* color: #da712c !important; */
+    background-color: #da712c;
+  }
+  .navbar-collapse {
+    max-width: 200px;
+    width: 200px;
+    height: 400px;
+    border: 1px solid #da712c;
+    position: absolute;
+    top: 5vh;
+    right: 3%;
+    /* transition: right 0.5s; */
+    background: #1f242d;
+    border-radius: 2%;
+    padding: 15px;
+    font-size: 13px;
+    transition: width 1s, height 1s;
+    transition-timing-function: ease;
+  }
 }
+
+/* @media (max-width: 991.98px) {
+  .navbar-collapse {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    max-width: 300px; 
+    height: 100%;
+    transition: right 0.3s ease-in-out; 
+  }
+
+  .navbar-toggler.collapsed + .navbar-collapse {
+    right: 0; 
+  }
+} */
