--- a/portfolio-client/src/components/styles.css
+++ b/portfolio-client/src/components/styles.css
@@ -154,7 +154,7 @@
   .sticky-top-top {
     position: fixed !important;
     top: 0;
-    z-index: 999999999999999999999;
+    z-index: 999999;
   }
   .navbar-toggler {
     /* color: #da712c !important; */
