--- a/portfolio-client/src/components/styles.css
+++ b/portfolio-client/src/components/styles.css
@@ -13,7 +13,7 @@
   color: #da712c;
 }
 .letter__spacing {
-  letter-spacing: 3px;
+  letter-spacing: 1px;
   margin-bottom: 0px !important;
   padding-bottom: 0px !important;
 }
@@ -33,8 +33,8 @@
   /* background-color: #EA738D; */
   /* border-radius: 30px; */
   /* border-top: 4px solid var(--secondary-color) !important; */
-  border-top: 4px solid #1f242d !important;
-  transition: all 1s;
+  border-top: 3px solid #1f242d;
+  transition: all 0.5s;
   transition-timing-function: linear;
 }
 .text__pink:hover {
@@ -42,10 +42,10 @@
   /* border-top: 4px solid var(--primary-color) !important; */
   background-color: #323946;
   color: #da712c !important;
-  border-top: 4px solid #da712c !important;
+  border-top: 3px solid #da712c;
   padding-bottom: 0px !important;
   margin-bottom: 0px !important;
-  transform: scale(1.1) !important;
+  transform: scale(1.02) !important;
 }
 .stack__card {
   width: 300px;
@@ -131,7 +131,7 @@
   /* border-top: 4px solid var(--primary-color) !important; */
   /* background-color: #e6e5e5eb; */
   color: #da712c !important;
-  border-top: 4px solid #da712c !important;
+  border-top: 3px solid #da712c !important;
   padding-bottom: 0px !important;
   margin-bottom: 0px !important;
 }
@@ -140,6 +140,31 @@
   background: linear-gradient(to bottom right, #403f44, #1e1b32);
   color: #ea738d !important;
 } */
+
+.sticky-top-top {
+  position: fixed !important;
+  /* top: 0; */
+  z-index: 999999;
+  padding-left: 0;
+  padding-right: 0;
+}
+@media (min-width: 1170px) and (max-width: 1400px) {
+  .text__pink {
+    border-top: 1px solid #1f242d !important;
+  }
+  .navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: 0.2rem;
+    padding-left: 0.2rem;
+  }
+  .nav__active {
+    border-top: 1px solid #da712c !important;
+  }
+  .sticky-top-top {
+    position: fixed !important;
+    top: 0;
+    z-index: 999999;
+  }
+}
 
 @media (min-width: 320px) and (max-width: 768px) {
   .custom_nav_brand {
@@ -179,25 +204,7 @@
     transition: width 1s, height 1s;
     transition-timing-function: ease;
   }
+  .text__pink {
+    border-top: 1px solid #1f242d !important;
+  }
 }
-
-/* @media (max-width: 991.98px) {
-  .navbar-collapse {
-    position: fixed;
-    top: 0;
-    right: -100%;
-    width: 100%;
-    max-width: 300px; 
-    height: 100%;
-    transition: right 0.3s ease-in-out; 
-  }
-
-  .navbar-toggler.collapsed + .navbar-collapse {
-    right: 0; 
-  }
-} */
-/* @media (min-width: 1000px) and (max-width: 1400px) {
-  body {
-    font-size: medium;
-  }
-} */
