--- a/portfolio-client/src/pages/Testimonials/Testimonials.css
+++ b/portfolio-client/src/pages/Testimonials/Testimonials.css
@@ -17,6 +17,14 @@
 }
 .testi-img:hover {
   border: 1px solid #da712c;
+  /* border: 1px solid #af5113; */
+}
+
+@media (min-width: 1170px) and (max-width: 1400px) {
+  .card-style-testimonial {
+    width: 22rem;
+    min-height: 600px;
+  }
 }
 
 @media (min-width: 320px) and (max-width: 768px) {
